--- a/index.html
+++ b/index.html
@@ -2,156 +2,12 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto+Condensed:wght@300&display=swap"
-        rel="stylesheet">
-    <style>
-        header {
-            font-family: 'Oswald', sans-serif;
-            color: var(--header_foreground_color);
-            background: var(--header_background_color);
-            padding: 10px;
-            border: 3px grey solid;
-        }
-
-        p {
-            font-family: 'Roboto Condensed', sans-serif;
-            padding: 10px;
-        }
-
-        :root {
-            --header_foreground_color: white;
-            --header_background_color: black;
-            --footer_foreground_color: white;
-            --footer_background_color: black;
-            --nav_foreground_color: white;
-            --nav_background_color: grey;
-        }
-
-        footer {
-            color: var(--footer_foreground_color);
-            background: var(--footer_background_color);
-            padding: 10px;
-        }
-
-        nav.bg-dark {
-            color: var(--nav_foreground_color);
-            background: var(--nav_background_color) !important;
-        }
-
-        .form-box {
-            max-width: 500px;
-            padding: 20px;
-            background-color: rgb(190, 188, 188);
-        }
-
-        .navbar-dark .navbar-nav .nav-link {
-            color: var(--header_foreground_color)
-        }
-    </style>
+    <title>Lab 8</title>
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Curtis Lee</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
-                aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarsExample04">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <h1>Assignment 2</h1>
-    </header>
-    <main>
-        <section id="section_1"></section>
-        <br>
-        <section id="section_2"></section>
-        <br>
-        <section id="section_3"></section>
-        <br>
-        <section id="section_4"></section>
-        <img src="https://www.planetware.com/wpimages/2018/10/top-ski-resorts-world-france-haute-savoie-chamonix.jpg"
-            alt="ski" usemap="#ski" />
-        <map name="ski" id="ski">
-            <area shape="rectangle" coords="0,0,730,440" alt="ski" href="https://www.youtube.com/watch?v=fbqHK8i-HdA">
-        </map>
-        <br>
-        <br>
-        <section id="section_5"></section>
-        <br>
-        <section id="contact"></section>
-        <br>
-        <section id="about"></section>
-    </main>
-    <div class="form-box">
-        <h1>Contact Form</h1>
-        <form action="thankyou.html" method="get">
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input class="form-control" id="name" type="text" name="Name" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input class="form-control" id="email" type="email" name="Email" required>
-            </div>
-            <div class="form-group">
-                <label for="phone">Phone Number</label>
-                <input class="form-control" id="phone" type="tel" name="phone" required>
-            </div>
-            <div class="form-group">
-                <label for="message">Message</label>
-                <textarea class="form-control" id="message" name="Message"></textarea>
-            </div>
-            <input class="btn btn-primary" type="submit" value="Submit" />
-    </div>
-    </form>
-    </div>
-    <footer>
-        <p>Curtis Lee</p>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/1.1.1/marked.js"></script>
-    <script>
-        $("document").ready(() => {
-            $.get("items/experience_1.md").then((sData) => {
-                $("#section_1").append(marked(sData));
-            });
-            $.get("items/experience_2.md").then((sData) => {
-                $("#section_2").append(marked(sData));
-            });
-            $.get("items/experience_3.md").then((sData) => {
-                $("#section_3").append(marked(sData));
-            });
-            $.get("items/experience_4.md").then((sData) => {
-                $("#section_4").append(marked(sData));
-            });
-            $.get("items/experience_5.md").then((sData) => {
-                $("#section_5").append(marked(sData));
-            });
-            $.get("contact.md").then((sData) => {
-                $("#contact").append(marked(sData));
-            });
-            $.get("about.md").then((sData) => {
-                $("#about").append(marked(sData));
-            });
-        });
-    </script>
+    <h1>Lab 8</h1>
+    <p>This is lab 8 on UX220. The goal is to put a page on the internet.</p>
 </body>
 
 </html>
